[gd_scene load_steps=6 format=2]

[ext_resource path="res://Characters/Stats/Health.gd" type="Script" id=1]
[ext_resource path="res://Characters/Player/HealthBar.gd" type="Script" id=2]
[ext_resource path="res://HealthBars/health-bar-health.png" type="Texture" id=3]
[ext_resource path="res://HealthBars/health-bar-under.png" type="Texture" id=4]
[ext_resource path="res://HealthBars/health-bar-over.png" type="Texture" id=5]

[node name="Health" type="Node2D"]
script = ExtResource( 1 )

[node name="HealthBar" type="Node2D" parent="."]
position = Vector2( -27, -34 )
scale = Vector2( 0.8, 0.8 )
z_index = 1
script = ExtResource( 2 )

[node name="DamageProgressBar" type="TextureProgress" parent="HealthBar"]
margin_right = 64.0
margin_bottom = 8.0
value = 80.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 1, 0, 0, 1 )

[node name="ProgressBar" type="TextureProgress" parent="HealthBar"]
margin_right = 64.0
margin_bottom = 8.0
value = 70.0
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 0, 1, 0, 1 )

[node name="DamageTween" type="Tween" parent="HealthBar"]
